<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/buttonOneTimeWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_work"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/buttonOneTimeWorkWithConstraints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_work_with_constraints"
            app:layout_constraintTop_toBottomOf="@+id/buttonOneTimeWork"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/buttonPeriodicWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodic_work"
            app:layout_constraintTop_toBottomOf="@+id/buttonOneTimeWorkWithConstraints"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/buttonPeriodicWorkWithConstraints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodic_work_with_constraints"
            app:layout_constraintTop_toBottomOf="@+id/buttonPeriodicWork"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/buttonChainedWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chained_work"
            app:layout_constraintTop_toBottomOf="@+id/buttonPeriodicWorkWithConstraints"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>